--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,31 @@
 *.exe
 *.out
 *.app
+
+# Compiled class file
+*.class
+
+# Log file
+*.log
+*.log4j
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+.idea
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+*.iml
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
