--- a/src/main/resources/keymapping.yml
+++ b/src/main/resources/keymapping.yml
@@ -4,17 +4,18 @@
 
 #########################一号操作板#########################
 #按钮
-controller1:
+controller2:
   button:
+    name: "button1"
     gUID: "8AJto/PJzxG/x0RFU1QAAA=="
     button_1: "twice_w"
     button_2: "e"
     button_3: "twice_f"
-    button_4: "o"
-    button_5: "v"
-    button_6: "u"
+    button_4: "twice_o"
+    button_5: "twice_v"
+    button_6: "twice_u"
     button_7: "always_enter"
-    button_8: "t"
+    button_8: "twice_t"
     button_9: "x"
     button_10: "x"
     button_11: "p"
@@ -31,16 +32,17 @@ controller1:
 
 #########################二号操作板#########################
 #按钮
-controller2:
+controller1:
   button:
+    name: "button2"
     gUID: ""
-    button_1: "o"
-    button_2: "k"
+    button_1: "twice_o"
+    button_2: "twice_k"
     button_3: "twice_s"
     button_4: "twice_d"
     button_5: "j"
     button_6: "k"
-    button_7: "l"
+    button_7: "twice_l"
     button_8: "y"
     button_9: "z"
     button_10: "r"
